# masteroppgave

./: .gitignore  listener.cpp
environment_maker/: .gitignore  CMakeLists.txt  main.cpp
oppg/: .gitignore  CMakeLists.txt  SVG_builder.cpp  main.cpp  msp  shortest_path.cpp  tests.cpp  tug_a_star_search.cpp  tug_all_pairs_shortest_path.cpp  tug_assign_paths.cpp  tug_boat.cpp  tug_environment.cpp  tug_multiple_shortest_path_simulation.cpp  tug_point.cpp  tug_scheduler.cpp  tug_shortest_path.cpp  tug_waypoint.cpp  waypoint.cpp
oppg/coordination/include/: tug_assign_paths.hpp  tug_scheduler.hpp
oppg/coordination/src/: tug_assign_paths.cpp  tug_scheduler.cpp
oppg/environments/: apsp_env.txt  big_test.txt  environment.txt  peterhead.txt  similar.txt  test_environment.txt  test_environment_out_of_boundary.txt
oppg/geometry/include/: tug_boat.hpp  tug_environment.hpp  tug_point.hpp  tug_polyline.hpp  tug_waypoint.hpp
oppg/geometry/src/: tug_boat.cpp  tug_environment.cpp  tug_point.cpp  tug_waypoint.cpp
oppg/include/: SVG_builder.hpp  shortest_path.h  shortest_path_node.hpp  tug_a_star_search.hpp  tug_all_pairs_shortest_path.hpp  tug_assign_paths.hpp  tug_boat.hpp  tug_environment.hpp  tug_environment_validator.HPP  tug_multiple_shortest_path_simulation.hpp  tug_point.hpp  tug_polyline.hpp  tug_scheduler.hpp  tug_shortest_path.hpp  tug_waypoint.hpp  visilibity.cpp  waypoint.h
oppg/misc/: Environment_validator.cpp  demo1603.cpp  tug_multiple_shortest_path_simulation.cpp
oppg/search/include/: tug_a_star_search.hpp  tug_all_pairs_shortest_path.hpp  tug_shortest_path.hpp
oppg/search/src/: tug_a_star_search.cpp  tug_all_pairs_shortest_path.cpp  tug_shortest_path.cpp
ros_ws/: big_test.txt  hello.sh
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_ws/devel/lib/pkgconfig/: visibility_graph.pc
ros_ws/devel/lib/visibility_graph/: listener  talker  visibility_graph_node
ros_ws/devel/share/visibility_graph/cmake/: visibility_graphConfig.cmake
ros_ws/src/coordination/: CMakeLists.txt  package.xml
ros_ws/src/coordination/include/coordination/: tug_assign_paths.hpp  tug_scheduler.hpp
ros_ws/src/coordination/src/: tug_assign_paths.cpp  tug_scheduler.cpp
ros_ws/src/coordination/test/: test.cpp
ros_ws/src/gazebo_tutorials/: package.xml
ros_ws/src/gazebo_tutorials/launch/: hello.launch
ros_ws/src/gazebo_tutorials/worlds/: hello.world
ros_ws/src/geometry/: CMakeLists.txt  package.xml
ros_ws/src/geometry/include/geometry/: SVG_builder.hpp  tug_boat.hpp  tug_environment.hpp  tug_point.hpp  tug_polyline.hpp  tug_ship.hpp  tug_switching_point_decision.hpp  tug_waypoint.hpp
ros_ws/src/geometry/src/: SVG_builder.cpp  tug_boat.cpp  tug_environment.cpp  tug_point.cpp  tug_switching_point_decision.cpp  tug_waypoint.cpp
ros_ws/src/geometry/test/: test.cpp
ros_ws/src/master/: CMakeLists.txt  package.xml
ros_ws/src/master/environments/: env10.txt  env100.txt  env20.txt  env200.txt  env50.txt
ros_ws/src/master/include/master/: init_test_environment.txt  tug_communicator.hpp  tug_constants.hpp  tug_waypoint_publisher.hpp
ros_ws/src/master/launch/: demo.launch  master_first_test.launch  master_gazebo.launch  master_gazebo2.launch
ros_ws/src/master/msg/: BoatPose.msg  Waypoints.msg
ros_ws/src/master/src/: 0,0  avoid_ship_collision_service.cpp  current_waypoints_service.cpp  main_tug.cpp  master_node.cpp  speed_tester.cpp  tug_communicator.cpp  tug_waypoint_publisher.cpp
ros_ws/src/master/srv/: WaypointAvailable.srv
ros_ws/src/master/test/: munkres_speed_test.cpp  test_shortest_path.cpp  test_speed.cpp
ros_ws/src/search/: CMakeLists.txt  package.xml
ros_ws/src/search/include/search/: shortest_path_node.hpp  tug_a_star_search.hpp  tug_all_pairs_shortest_path.hpp  tug_route_around_ship.hpp  tug_shortest_path.hpp
ros_ws/src/search/src/: tug_a_star_search.cpp  tug_all_pairs_shortest_path.cpp  tug_route_around_ship.cpp  tug_shortest_path.cpp
ros_ws/src/search/test/: test.cpp
ros_ws/src/simulation/: CMakeLists.txt  package.xml  start.launch  start_rviz.launch
ros_ws/src/simulation/include/simulation/: map_and_marker.rviz  tug_model.urdf
ros_ws/src/simulation/src/: basic_shapes.cpp  obstacles.cpp  tf_broadcaster.cpp  tug.cpp  tug_broadcaster.cpp  tug_mover.cpp  tug_pose.cpp  tug_w_transform_listener.cpp  world_frame_broadcaster.cpp
ros_ws/src/tug_description/: CMakeLists.txt  package.xml
ros_ws/src/tug_description/urdf/: tug.urdf
ros_ws/src/tug_gazebo/: CMakeLists.txt  model.config  model.sdf  package.xml
ros_ws/src/tug_gazebo/launch/: init_tugs.launch  map.launch  tug.launch
ros_ws/src/tug_gazebo/materials/scripts/: map_ground_plane.material
ros_ws/src/tug_gazebo/src/: goal_point_generator.cpp  tug_location_publisher.cpp  tug_startup_publisher.cpp  tug_state_publisher.cpp  waypTugs_publisher.cpp
ros_ws/src/tugboat_control/: CMakeLists.txt  package.xml
ros_ws/src/tugboat_control/srv/: WaypointAvailable.srv
ros_ws/src/visibility_graph/: CMakeLists.txt
ros_ws/src/visibility_graph/include/visibility_graph/: SVG_builder.hpp  tug_environment.h
ros_ws/src/visibility_graph/src/: SVG_builder.cpp  ex1tug.txt  main.cpp  shortest_path.cpp  tug_environment.cpp  visibility_graph_node.cpp
