<?xml version="1.0"?>
<package>
  <name>coordination</name>
  <version>0.0.0</version>
  <description>The coordination package</description>

  <maintainer email="rebcoxx@gmail.com">Rebecca Cox</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry</build_depend>
  <build_depend>search</build_depend>
  <build_depend>external</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>search</run_depend>
  <run_depend>external</run_depend>

</package>