<?xml version="1.0"?>
<package>
  <name>geometry</name>
  <version>0.0.0</version>
  <description>The geometry package</description>

  <maintainer email="rebcoxx@gmail.com">Rebecca Cox</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>external</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>external</run_depend>

  <test_depend>rosunit</test_depend>

</package>