<?xml version="1.0"?>
<package>
  <name>tug_description</name>
  <version>0.0.0</version>
  <description>The tug_description package</description>

  <maintainer email="rebcoxx@gmail.com">Rebecca Cox</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

</package>