<?xml version="1.0"?>
<package>
  <name>tug_gazebo</name>
  <version>0.0.0</version>
  <description>The tug_gazebo package</description>

  <maintainer email="rebcoxx@gmail.com">Rebecca Cox</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>master</build_depend>
  <build_depend>tugboat_control</build_depend>

  <run_depend>master</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tugboat_control</run_depend>

</package>